# parrot_challenge

./: .env.local  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
api/: permissions.py  urls.py
api/managers/: user_manager.py
api/migrations/: 0001_initial.py  0002_waiter.py  0003_customer_product_order_orderproduct_order_products.py  0004_alter_orderproduct_price_at_order_and_more.py  0005_alter_orderproduct_order.py
api/models/: __init__.py  customer.py  order.py  order_product.py  product.py  user.py  waiter.py
api/serializers/: order_product_serializer.py  order_serializer.py  sales_report_serializer.py  waiter_serializer.py
api/services/: order_creator.py
api/tests/managers/: test_user_manager.py
api/tests/models/: test_user.py  test_waiter.py
api/tests/serializers/: test_waiter_serializer.py
api/tests/views/: test_waiter_detail_view.py  test_waiter_view.py
api/views/: order_view.py  sales_report_views.py  waiter_detail_view.py  waiter_view.py  waiter_views.py
parrot_challenge/: asgi.py  settings.py  urls.py  wsgi.py
